Up plugin dependencies' versions.